# streamrs

./: .gitignore  Cargo.toml  README.md  bacon.toml  justfile
.cargo/: config.toml
.github/workflows/: main.yaml
