[workspace]
resolver = "2"
members = ["crates/bin/streamit"]

[workspace.dependencies]
anyhow = { version = "1" }
async-trait = "0"
bilrost = "0"
chrono = "0"
fluvio = "0"
fluvio-protocol = "0"
futures = "0"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "2"
time = { version = "0", features = ["serde", "parsing", "formatting", "macros"] }
tokio = { version = "1",  default-features = false, features = ["full", "tracing", "macros", "time"] }
tracing = "0"
tracing-subscriber = {version = "0", features = ["env-filter"]}

[profile.dev]
opt-level = 0 # Disable optimizations and reduce the compile time
split-debuginfo = "unpacked" # improve compilation performance by using unpacked debug symbols
debug=true

[profile.release]
lto = false # Disable link-time optimization to reduce build time
codegen-units = 64 # Reduce number of codegen units to increase optimizations
panic = 'abort'
# strip = true # Strip symbols from binary*
# opt-level = 3 # All optimizations
incremental = true # shorten hot local builds duration

[workspace.metadata]
deny-unsafe-code = true
