[workspace]
resolver = "2"
members = ["crates/bin/streamit"]

[workspace.dependencies]
anyhow = { version = "1" }
async-trait = "0"
bilrost = "0"
chrono = "0"
fluvio = "0"
fluvio-protocol = "0"
futures = "0"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "2"
time = { version = "0", features = ["serde", "parsing", "formatting", "macros"] }
tokio = { version = "1",  default-features = false, features = ["full", "tracing", "macros", "time"] }
tracing = "0"
tracing-subscriber = {version = "0", features = ["env-filter"]}
tracing-test = "0"

[profile.dev]
split-debuginfo = "unpacked" # improve compilation performance by using unpacked debug symbols
debug=0

# optimized with `cargo wizard apply fast-runtime release`
# consider using the cargo-pgo subcommand to further optimize the binary
[profile.release]
lto = true # Disable link-time optimization to reduce build time
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'
# strip = true # Strip symbols from binary*
# opt-level = 3 # All optimizations
incremental = false

[workspace.metadata]
deny-unsafe-code = true

# this is supported in Rust 1.85.0 and later
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
allow_attributes = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
multiple_crate_versions = "allow"
too_many_lines = "allow"
cargo_common_metadata = "allow"
redundant_pub_crate = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"

[workspace.lints.rust]
rust-2024-compatibility = "warn"
